--- a/API/Api_general/package.json
+++ b/API/Api_general/package.json
@@ -2,7 +2,7 @@
   "name": "api_general",
   "version": "1.0.0",
   "description": "Esto es una prueba de api",
-  "main": "3030",
+  "main": "index.js",
   "scripts": {
     "dev" : "nodemon ./src/index.js",
     "test": "npm run dev"
