--- a/Proyectos_Angular/primeros-pasos-angular/package.json
+++ b/Proyectos_Angular/primeros-pasos-angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aprendiendo-angular-2",
+  "name": "primeros-pasos-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:aprendiendo-angular-2": "node dist/aprendiendo-angular-2/server/server.mjs"
+    "serve:ssr:primeros-pasos-angular": "node dist/primeros-pasos-angular/server/server.mjs"
   },
   "private": true,
   "dependencies": {
