--- a/Proyectos REACT/my-final-project/package.json
+++ b/Proyectos REACT/my-final-project/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "video-juegos-jorddy",
+  "name": "my-final-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
